Correction z-index pour autocomplete

--- a/style.css
+++ b/style.css
@@ -307,6 +307,7 @@ option.region-label {
 /* --- AUTOCOMPLETE --- */
 .autocomplete-shell {
   position: relative;
+  z-index: 10;
 }
 
 .autocomplete-list {
